--- a/docs/releasenotes.txt
+++ b/docs/releasenotes.txt
@@ -1,91 +1,56 @@
-		RELEASE NOTES FOR IGNITIONSERVER RELEASE: 0.3.2
-# $Id: releasenotes.txt,v 1.15 2004/07/02 23:16:56 ziggythehamster Exp $
+		RELEASE NOTES FOR IGNITIONSERVER RELEASE: 0.3.3
+# $Id: releasenotes.txt,v 1.17 2004/07/25 01:36:35 ziggythehamster Exp $
 
 
 Changes:
-Changed the part/quit messages to be like FreeNode: *** Nick has quit ("Reason")
-M: lines now have an extra parameter. This parameter tells the server which adapter to bind on. It goes directly before the port (:6667 => :*:6667). Use * for all adapters.
-Real host names can be used in access entries if fake hostnames are enabled.
-Optimizations
-/version reply is more consistant with standards
-Services are now reported as an IRC service in /whois
-The "...is connecting from <addr>; IP address is <ip>" is now using raw 320 (RPL_WHOISSPECIAL)
-NJOIN now returns "Permission Denied" for clients who aren't servers
-ACCESS entries are now propragrated across the network
-Deleting *!*@* from the access list is now the same as clearing the access list
-Services can now set a channel's ACCOUNT property
-SOCKET events are "normalized"
-/CHGHOST can now be used by servers (and thusly hostname changes can be propragrated)
+Added MAXTARGETS=5 to the 005 reply
+Removed STD=i-d from the 005 reply (I have no clue what it means)
+Added some things to the 005 reply
+Cleaned up /prop a bit
+You cannot create channels with * or ?
+Winsock errors previously reported as "Unknown" are now reported properly per the Platform SDK's definition.
+ignitionServer now uses Winsock 2.0! Dumb mistake, but it should work fine now on newer systems.
+Code cleanup!
+Some Integers have been changed to Longs for speed (3-4KB of memory extra though)
+ignitionServer no longer uses Val() as an array
 
 New Features include:
-New IRC operator level system. You only need generic flags, like N (Network Admin), O (global operator), and o (local operator). Some things can optionally be added to the operator's privileges (for example: protected operator). See ircx.conf for an explaination.
-/who * o now returns all IRC operators
-PROP changes are now propragrated across the network
-WallOps system is now working. Your operators need +W in order to send WallOps (/wallops message).
-Command line control.exe -- lets you start/stop your server from the commandline (used in conjunction with the new monitor)
-IRCXpro Migration Wizard -- lets you convert your existing IRCXpro settings to a format that ignitionServer can read
-X:AUTOVHOST -- automatically give operators a VHost if a VHost exists with the same username and password
-Knock/+u channel mode
-Whisper (/whisper #Channel User Message)
-More oper modes
-New ignitionServer Monitor! It works on all versions of Windows and has a better UI too :)
-New ignitionServer PassCrypt! No new features in it, but it's less buggy and a lot cooler looking
-The monitor now has a "more info" button which shows some server statistics. Refreshed every 5 seconds.
+DATA/REQUEST/REPLY is done! This means that Comic Chat functions properly now, and you can now proceed to use IRCX metadata :)
+User properties! GUID, Identity, Nick, and OID
+ignitionServer is now aware of the port clients connect on.
+Mostly working /event system. It's almost the same as the MS Exchange event system.
 
 Bug Fixes:
 
 Bug #  | Bug Name
 ---------------------
-968389 | readme needs to mention ircx.conf
-968377 | /rehash -MOTD needs to mention it's rehashing ircx.motd
-967769 | MaxClones doesn't work sometimes
-969384 | Link passwords aren't verified
-       | quitting with no message shows Exit: Exit: Nick
-969405 | the server pings non-idle users
-       | wrong ping reply when a client pings the server
-969401 | OnJoin is incorrectly formatted
-968699 | UNIX time doesn't take DST into account (1 hour off)
-       | UNIX time may be a few seconds off
-967788 | Some characters need to be allowed in nicknames
-968650 | SOCKET.CLOSE would not be thrown when MaxClones is reached
-969409 | +P/+p operators cannot join +i channels
-       | If part messages are null, it no longer sends ""
-       | When leaving a channel, the incorrect casing of the room could have been sent
-972282 | Error 91 in m_part
-969310 | M: line needs extension
-969095 | New oper level system
-972872 | QUIT doesn't subtract from unknown connections
-       | Duplicate modes mess up the new oper system
-       | Operators can get illegal modes (+Z, +r, +S, for example)
-       | Real host names can be used in access entries
-973593 | /who * o doesn't work
-       | Users can see your channels if you're +i
-       | CREATE formatting mistake
-974079 | /create lets you make illegal channels
-       | +O wasn't getting set
-975749 | Disable switch for oper mode expansion
-977128 | OPER reply is wrong
-977052 | Various mode problems
-975698 | Admin location was reported as server location
-975143 | L: lines need to allow destination hostnames
-977296 | Weird bugs with /server
-977825 | Erroneous CRLFs
-978619 | Wrong /part error raw
-978588 | Client Exited/Client Quit need to be the same
-       | /raw close SHOULD work now...
-980102 | Normal opers with +P/+p can't kick netadmins with +P/+p and +P > +p
-980284 | ACCESS-related bugs
-       | You can +/- ov a +q user as a +o user
-       | PROP changes get sent to the server that originated the PROP change
-890133 | Some channel information isn't sent to links
-       | Monitor can now start on Windows startup
-       | Monitor no longer hangs while waiting for you to click it
-982347 | Ping timeouts aren't propragrated across the network
-       | Monitor doesn't properly log in
-982986 | You can whisper outside of channels
+984801 | "No O-Lines for your host" lacks nickname
+983820 | Mode bug
+       | "You have joined too many channels" output is wrong
+988403 | /prop doesn't allow for specific item retreival
+989095 | You can set mode +l 0
+988757 | new mode code has broken ban support
+989222 | /prop #Channel needs to return need more parameters
+       | Bans don't show up in XChat
+988749 | erroneous CRLF onjoin
+989161 | /userhost returns more than 5 results
+990475 | erroneous CRLF in /whois
+988705 | +hps mode problem
+989920 | +h cannot be set by links
+       | /join 0 does not work
+888693 | Wildcard /list didn't work
+994283 | You can send a blank message
+965947 | Some events need consistency
+       | You can create channels with ? or * in the name
 
 Comments:
-Many new features are in this version of ignitionServer! There are also about 30 bugs
-that have been fixed. We highly suggest everybody upgrades to this version to have the
-best and most stable server avaliable. See the other sections for information on what
-we've added/changed/tweaked/fixed. I'm sure you'll like it :)
+ignitionServer 0.3.3 is VERY MUCH improved from the previous version with
+several new features, including the IRCX commands DATA, REQUEST, and REPLY.
+These commands allow for non-text data to be transmitted to channels, users,
+and other interested parties. These commands have traditionally been used
+by Microsoft Chat to send comic character data, but any client is welcome
+to add support for IRCX DATA/REQUEST/REPLY. There have also been several
+annoying bugs fixed, and I have officially deemed linking to be "alpha".
+No longer is it experimental :). Still, you shouldn't link to other servers
+unless you're willing to file bug reports, but it won't blow up if you do
+link servers.
