--- a/changelog.txt
+++ b/changelog.txt
@@ -770,3 +770,4 @@ Zg - [18-Jun] - Fixed bug #23 (can set modes that don't exist with + or - sign)
 Zg - [18-Jun] - New boilerplate; now the headers look less sucky.
 Zg - [18-Jun] - Bundling VBTracer now.
 Zg - [18-Jun] - m_accessfuncs converted over to VBTracer
+Zg - [19-Jun] - Improved VBTracer (supports our debugging properties, message class and module name)
